--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,34 @@
   }
 }
 
+@layer utilities {
+  @variants responsive {
+
+    .neu-shadow {
+      border-radius: 30px;
+      background: #ededed;
+      box-shadow:  10px 10px 19px #d8d8d8,
+                   -10px -10px 19px #ffffff;
+      color: #b6b4b8;
+      padding: 15px;
+    }
+
+    .neu-shadow-spotify {
+      border-radius: 30px;
+      background: #1ED760;
+      box-shadow:  10px 10px 19px #d8d8d8,
+                   -10px -10px 19px #ffffff;
+      color: white;
+      padding: 15px;
+    }
+  }
+}
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: #b6b4b8;
+  background: rgb(237, 237, 237);
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
