--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,19 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
 @layer utilities {
   @variants responsive {
@@ -40,8 +27,8 @@
 }
 
 body {
-  color: #b6b4b8;
-  background: rgb(237, 237, 237);
+  color: rgb(156, 163, 175);
+  background: rgb(203 ,213, 225);
 }
 
 body::-webkit-scrollbar {
