--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@
 
 body {
   color: rgb(156, 163, 175);
-  background: rgb(203 ,213, 225);
+  background: rgb(245,255,250);
 }
 
 body::-webkit-scrollbar {
